--- a/osa0/0.4.md
+++ b/osa0/0.4.md
@@ -1,5 +1,5 @@
 ```mermaid
-sequenceDiargam
+sequenceDiagram
 participant browser
 participant server
 
@@ -29,7 +29,7 @@ Note right of browser: Suoritetaan JavaScript koodi, joka hakee JSON tietoja pal
 browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
 activate server
 server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, {"content": "Uusi muistiinpano", "date": "2025-03-06"}, ...]
-diactivate server
+deactivate server
 
 Note right of browser: Selain suorittaa callback funktion, joka renderöi muistiinpannot.
 ````
