--- a/osa0/0.5.md
+++ b/osa0/0.5.md
@@ -1,1 +1,28 @@
+```mermaid
+sequenceDiagram
+patrticipant browser
+participant server
 
+browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
+activate server
+server-->>browser: HTML document
+deactivate server
+
+browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+activate server
+server-->>browser: the css file
+deactivate server
+
+browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
+activate server
+server-->>browser: the JavaScript file
+deactivate server
+
+Note right of browser: Suoritetaan JavaScript koodi, joka hakee JSON tietoja palvelimelta.
+browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+activate server
+server-->>browser: [{"content": "HTML is easy", "date": "2023-1-1"}, ... ]
+deactivate server
+
+Note right of browser: Selain suorittaa callback funktion, joka renderöi muistiinpannot.
+```
