--- a/osa0/0.5.md
+++ b/osa0/0.5.md
@@ -1,6 +1,6 @@
 ```mermaid
 sequenceDiagram
-patrticipant browser
+participant browser
 participant server
 
 browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
